deploy/k8s/staging/template/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gau-authorization-deployment
  namespace: bao-${DEPLOY_ENV}-env
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gau-authorization-service
  template:
    metadata:
      labels:
        app: gau-authorization-service
    spec:
      containers:
        - name: gau-authorization-service
          image: iamqbao/gau_authorization_service:latest
          resources:
            requests:
              cpu: "300m"
              memory: "100Mi"
            limits:
              cpu: "500m"
              memory: "500Mi"

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-authorization-deployment
  namespace: bao-${DEPLOY_ENV}-env
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-authorization-service
  template:
    metadata:
      labels:
        app: redis-authorization-service
    spec:
      containers:
        - name: redis-authorization-service
          image: redis:7.2-alpine
          resources:
            requests:
              cpu: "300m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
